--- a/config/crd/patches/cainjection_in_slodescs.yaml
+++ b/config/crd/patches/cainjection_in_slodescs.yaml
@@ -5,4 +5,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: slodescs.slo.ibm.com.slo.ibm.com
+  name: slodescs.slo.ibm.com
