--- a/config/crd/patches/webhook_in_slodescs.yaml
+++ b/config/crd/patches/webhook_in_slodescs.yaml
@@ -3,7 +3,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: slodescs.slo.ibm.com.slo.ibm.com
+  name: slodescs.slo.ibm.com
 spec:
   conversion:
     strategy: Webhook
