--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -7,7 +7,7 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - slo.ibm.com.slo.ibm.com
+  - slo.ibm.com
   resources:
   - slodescs
   verbs:
@@ -19,7 +19,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - slo.ibm.com.slo.ibm.com
+  - slo.ibm.com
   resources:
   - slodescs/status
   verbs:
