--- a/config/rbac/slodesc_editor_role.yaml
+++ b/config/rbac/slodesc_editor_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: slodesc-editor-role
 rules:
 - apiGroups:
-  - slo.ibm.com.slo.ibm.com
+  - slo.ibm.com
   resources:
   - slodescs
   verbs:
@@ -17,7 +17,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - slo.ibm.com.slo.ibm.com
+  - slo.ibm.com
   resources:
   - slodescs/status
   verbs:
