--- a/config/rbac/slodesc_viewer_role.yaml
+++ b/config/rbac/slodesc_viewer_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: slodesc-viewer-role
 rules:
 - apiGroups:
-  - slo.ibm.com.slo.ibm.com
+  - slo.ibm.com
   resources:
   - slodescs
   verbs:
@@ -13,7 +13,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - slo.ibm.com.slo.ibm.com
+  - slo.ibm.com
   resources:
   - slodescs/status
   verbs:
